sosyal mefya önizlemeleri test ediliyor

--- a/b/Discord/index.html
+++ b/b/Discord/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
+
+    <!-- Temel Meta Etiketleri -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr.Polaton Discord Sunucusu</title>
+    <meta name="title" content="Dr.Polaton Discord Sunucusu">
+    <meta name="description" content="Discord Sunucumuza girin,
+Soru çözme/çözdürme havuzuna katılın!">
+
+    <!-- Sosyal Medya Önizlemeleri -->
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://drpolaton.com/b/Discord/">
+    <meta property="og:title" content="Dr.Polaton Discord Sunucusu">
+    <meta property="og:description" content="Discord Sunucumuza girin,
+Soru çözme/çözdürme havuzuna katılın!">
+    <meta property="og:image"
+          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://drpolaton.com/b/Discord/">
+    <meta property="twitter:title" content="Dr.Polaton Discord Sunucusu">
+    <meta property="twitter:description" content="Discord Sunucumuza girin,
+Soru çözme/çözdürme havuzuna katılın!">
+    <meta property="twitter:image"
+          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+
+    <!-- Yönlendirme Bağlantısı -->
     <meta http-equiv="refresh" content="0;URL=https://discord.gg/W2SYN54">
-    <title>Yönlendiriliyor... - Dr.Polaton</title>
+
+
 </head>
 <body>
-    <h1>Yönlendiriliyor...</h1>
-    <p>Otomatik yönlendirme olmaz ise <a href="https://discord.gg/W2SYN54">buraya</a> tıklayın.</p>
+<h1>Yönlendiriliyor...</h1>
+<p>
+    Otomatik yönlendirme olmaz ise
+    <!-- Yönlendirme Bağlantısı -->
+    <a href="https://discord.gg/W2SYN54">
+        buraya
+    </a>
+    tıklayın.
+</p>
 </body>
 </html>
