önizleme görüntüleri güncellendi

--- a/b/Discord/index.html
+++ b/b/Discord/index.html
@@ -19,7 +19,7 @@ Soru çözme/çözdürme havuzuna katılın!">
     <meta property="og:description" content="Discord Sunucumuza girin,
 Soru çözme/çözdürme havuzuna katılın!">
     <meta property="og:image"
-          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+          content="https://raw.githubusercontent.com/drpolaton/drpolaton.github.io/master/assets/img/the_best_and_last_white_plan.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@ Soru çözme/çözdürme havuzuna katılın!">
     <meta property="twitter:description" content="Discord Sunucumuza girin,
 Soru çözme/çözdürme havuzuna katılın!">
     <meta property="twitter:image"
-          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+          content="https://raw.githubusercontent.com/drpolaton/drpolaton.github.io/master/assets/img/the_best_and_last_white_plan.png">
 
     <!-- Yönlendirme Bağlantısı -->
     <meta http-equiv="refresh" content="0;URL=https://discord.gg/W2SYN54">
